Update code as per reviewer comments

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </button>
           </div>
           <button type="button" class="profile__add-btn">
-            <img src="./images/plus.svg" alt="pencil icon" />
+            <img src="./images/plus.svg" alt="plus icon" />
             New Post
           </button>
         </section>
@@ -124,7 +124,9 @@
           </ul>
         </section>
       </main>
-      <section class="footer page__section">2023 © Spots</section>
+      <footer class="footer page__section">
+        <p class="footer__copyright">2023 © Spots</p>
+      </footer>
     </div>
   </body>
 </html>
