Make changes according to Sprint 4 stage 2

--- a/index.html
+++ b/index.html
@@ -17,6 +17,36 @@
       </header>
 
       <main class="content">
+        <div class="modal__container">
+          <fieldset class="form__field">
+            <div class="modal__top">
+              <h2 class="title">Edit Profile</h2>
+              <button type="button" class="close__btn">
+                <img src="./images/closebutton.svg" alt="close button" />
+              </button>
+            </div>
+            <label class="form__label">
+              Name<input
+                id="name"
+                type="text"
+                class="form__input"
+                placeholder="Type your name"
+                required
+              />
+            </label>
+            <label class="form__label">
+              Description<input
+                id="name"
+                type="text"
+                class="form__input"
+                placeholder="Describe yourself"
+                required
+              />
+            </label>
+            <button type="submit" class="profile__save-btn">Save</button>
+          </fieldset>
+        </div>
+
         <section class="profile page__section">
           <img
             src="./images/avatar.jpg"
