--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <p class="footer__copyright">2023 © Spots</p>
       </footer>
 
-      <div class="modal modal_opened">
+      <div class="modal" id="edit-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">
             <img src="./images/closebutton.svg" alt="close button" />
