--- a/index.html
+++ b/index.html
@@ -24,15 +24,8 @@
             class="profile__avatar"
           />
           <div class="profile__info">
-            <h1 class="profile__name">
-              Aliaune Damala Bouga Time Bongo Puru Nacka Lu Lu Lu Badara Akon
-              Badara Akon
-            </h1>
-            <p class="profile__description">
-              Known mononymously as Akon is a Senegalese-American singer, record
-              producer, and entrepreneur. An influential figure in modern
-              world,and entrepreneur.
-            </p>
+            <h1 class="profile__name">Bessie Coleman</h1>
+            <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
               <img src="./images/pencil.svg" alt="pencil icon" />
               Edit Profile
@@ -49,6 +42,7 @@
             <template id="card-template">
               <li class="card">
                 <img class="card__image" src="" alt="" />
+                <button type="button" class="card__delete-button"></button>
                 <div class="card__content">
                   <h2 class="card__name"></h2>
                   <button type="button" class="card__like-button"></button>
@@ -95,7 +89,54 @@
           </form>
         </div>
       </div>
+
+      <div class="modal" id="add-card-modal">
+        <div class="modal__container">
+          <button type="button" class="modal__close-btn">
+            <img src="./images/closebutton.svg" alt="close button" />
+          </button>
+          <h2 class="modal__title">New post</h2>
+
+          <form name="edit-profile" class="modal__form">
+            <label for="add-card-link-input" class="modal__label">
+              Image link<input
+                id="add-card-link-input"
+                name="link"
+                type="url"
+                class="modal__input"
+                placeholder="Paste a link to the picture"
+                required
+              />
+            </label>
+
+            <label for="add-card-caption-input" class="modal__label">
+              Caption<input
+                id="add-card-caption-input"
+                name="caption"
+                type="text"
+                class="modal__input"
+                placeholder="Type your caption"
+                required
+              />
+            </label>
+
+            <button type="submit" class="modal__submit-btn">Save</button>
+          </form>
+        </div>
+      </div>
     </div>
+
+    <div class="modal" id="preview-modal">
+      <div class="modal__container_type_preview">
+        <button
+          type="button"
+          class="modal__close-btn modal__close-btn_type_preview"
+        ></button>
+        <img class="modal__image" src="" alt="" />
+        <p class="modal__caption"></p>
+      </div>
+    </div>
+
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
