--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
 
     <div class="modal" id="preview-modal">
-      <div class="modal__container_type_preview">
+      <div class="modal__container modal__container_type_preview">
         <button
           type="button"
           class="modal__close-btn modal__close-btn_type_preview"
