--- a/index.html
+++ b/index.html
@@ -66,25 +66,35 @@
 
           <form name="edit-profile" class="modal__form">
             <label for="profile-name-input" class="modal__label">
-              Name<input
+              Name
+              <input
                 id="profile-name-input"
                 type="text"
                 class="modal__input"
                 placeholder="Type your name"
+                minlength="2"
+                maxlength="40"
                 required
               />
+              <span id="profile-name-input-error" class="modal__error"></span>
             </label>
 
             <label for="profile-description-input" class="modal__label">
-              Description<input
+              Description
+              <input
                 id="profile-description-input"
                 type="text"
                 class="modal__input"
                 placeholder="Describe yourself"
+                minlength="2"
+                maxlength="200"
                 required
               />
+              <span
+                id="profile-description-input-error"
+                class="modal__error"
+              ></span>
             </label>
-
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
         </div>
@@ -99,7 +109,8 @@
 
           <form name="edit-profile" class="modal__form">
             <label for="add-card-link-input" class="modal__label">
-              Image link<input
+              Image link
+              <input
                 id="add-card-link-input"
                 name="link"
                 type="url"
@@ -107,17 +118,25 @@
                 placeholder="Paste a link to the picture"
                 required
               />
+              <span id="add-card-link-input-error" class="modal__error"></span>
             </label>
 
             <label for="add-card-caption-input" class="modal__label">
-              Caption<input
+              Caption
+              <input
                 id="add-card-caption-input"
                 name="caption"
                 type="text"
                 class="modal__input"
                 placeholder="Type your caption"
+                minlength="2"
+                maxlength="30"
                 required
               />
+              <span
+                id="add-card-caption-input-error"
+                class="modal__error"
+              ></span>
             </label>
 
             <button type="submit" class="modal__submit-btn">Save</button>
@@ -137,6 +156,7 @@
       </div>
     </div>
 
+    <script defer src="./scripts/validation.js"></script>
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
