--- a/src/index.html
+++ b/src/index.html
@@ -5,34 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Genti T." />
     <meta name="keywords" content="HTML, CSS, FLEX GRID" />
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <!-- <link rel="icon" type="image/x-icon" href="./images/favicon.ico" /> -->
+    <!-- <link rel="stylesheet" href="./pages/index.css" /> -->
     <title>Spots</title>
   </head>
 
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/Logo.svg" alt="Spots logo" class="header__logo" />
+        <img
+          src="<%=require('./images/Logo.svg')%>"
+          alt="Spots logo"
+          class="header__logo"
+        />
       </header>
 
       <main class="content">
         <section class="profile page__section">
-          <img
-            src="./images/avatar.jpg"
-            alt="User's avatar"
-            class="profile__avatar"
-          />
+          <div class="profile__avatar-container">
+            <button class="profile__avatar-btn">
+              <img
+                src="<%=require('./images/pencil-light.svg')%>"
+                alt="Pencil icon"
+                class="profile__pencil-icon"
+              />
+            </button>
+            <img
+              src="<%=require('./images/avatar.jpg')%>"
+              alt="User's avatar"
+              class="profile__avatar"
+            />
+          </div>
           <div class="profile__info">
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
-              <img src="./images/pencil.svg" alt="pencil icon" />
+              <img
+                src="<%=require('./images/pencil.svg')%>"
+                alt="pencil icon"
+              />
               Edit Profile
             </button>
           </div>
           <button type="button" class="profile__add-btn">
-            <img src="./images/plus.svg" alt="plus icon" />
+            <img src="<%=require('./images/plus.svg')%>" alt="plus icon" />
             New Post
           </button>
         </section>
@@ -54,13 +70,16 @@
       </main>
 
       <footer class="footer page__section">
-        <p class="footer__copyright">2023 © Spots</p>
+        <p class="footer__copyright">2024 © Spots</p>
       </footer>
 
       <div class="modal" id="edit-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">
-            <img src="./images/closebutton.svg" alt="close button" />
+            <img
+              src="<%=require('./images/closebutton.svg')%>"
+              alt="close button"
+            />
           </button>
           <h2 class="modal__title">Edit Profile</h2>
 
@@ -100,10 +119,15 @@
         </div>
       </div>
 
+      <!-------- Add card modal -------->
+
       <div class="modal" id="add-card-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">
-            <img src="./images/closebutton.svg" alt="close button" />
+            <img
+              src="<%=require('./images/closebutton.svg')%>"
+              alt="close button"
+            />
           </button>
           <h2 class="modal__title">New post</h2>
 
@@ -145,6 +169,8 @@
       </div>
     </div>
 
+    <!-------- Preview image modal -------->
+
     <div class="modal" id="preview-modal">
       <div class="modal__container modal__container_type_preview">
         <button
@@ -156,7 +182,65 @@
       </div>
     </div>
 
-    <script defer src="./scripts/validation.js"></script>
-    <script defer src="./scripts/index.js"></script>
+    <!-------- Edit avatar modal -------->
+
+    <div class="modal" id="avatar-modal">
+      <div class="modal__container">
+        <button type="button" class="modal__close-btn">
+          <img
+            src="<%=require('./images/closebutton.svg')%>"
+            alt="close button"
+          />
+        </button>
+        <h2 class="modal__title">Edit Avatar</h2>
+
+        <form name="edit-profile" class="modal__form">
+          <label for="profile-avatar-input" class="modal__label">
+            Avatar
+            <input
+              id="profile-avatar-input"
+              name="avatar"
+              type="url"
+              class="modal__input"
+              placeholder="Avatar link"
+              required
+            />
+            <span id="profile-avatar-input-error" class="modal__error"></span>
+          </label>
+
+          <button type="submit" class="modal__submit-btn">Save</button>
+        </form>
+      </div>
+    </div>
+
+    <!-------- Delete image modal -------->
+
+    <div class="modal" id="delete-modal">
+      <div class="modal__container">
+        <button
+          type="button"
+          class="modal__close-btn modal__close-btn_type_preview"
+        >
+          <img
+            src="<%=require('./images/closebutton.svg')%>"
+            alt="close button"
+          />
+        </button>
+        <h2 class="modal__title">
+          Are you sure you want to delete this image?
+        </h2>
+
+        <form name="delete-image" class="modal__form">
+          <div class="delete__image-btns">
+            <button type="submit" class="modal__submit-bt modal__delete-btn">
+              Delete
+            </button>
+            <button type="button" class="modal__submit-bt modal__cancel-btn">
+              Cancel
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
