Update CardLike functionality

--- a/src/index.html
+++ b/src/index.html
@@ -232,10 +232,10 @@
 
         <form name="delete-image" class="modal__form">
           <div class="delete__image-btns">
-            <button type="submit" class="modal__submit-bt modal__delete-btn">
+            <button type="submit" class="modal__submit-btn modal__delete-btn">
               Delete
             </button>
-            <button type="button" class="modal__submit-bt modal__cancel-btn">
+            <button type="button" class="modal__submit-btn modal__cancel-btn">
               Cancel
             </button>
           </div>
